--- a/assets/styles/app.css
+++ b/assets/styles/app.css
@@ -10,3 +10,12 @@
     outline: 1px dashed #fff;
     outline-offset: -10px;
 }
+
+.text-shadow {
+    text-shadow: 2px 2px 8px rgb(17, 24, 39);
+}
+
+.hr-custom {
+    border-top: 1px solid #ccc;
+    max-width: 500px
+}
