--- a/templates/trick/_comments.html.twig
+++ b/templates/trick/_comments.html.twig
@@ -1,5 +1,22 @@
 {% for comment in comments %}
-    <div class="bg-gray-100 rounded-xl my-3 p-2 block text-gray-800 w-1/2 text-center">
-        {{ comment.content }}
+
+    {% if currentUser is not null and comment.user.username is same as currentUser.username %}
+        {% set bgColor = 'bg-blue-100 dark:bg-darkBlue text-gray-800 dark:text-gray-100' %}
+        {% set username = 'Vous' %}
+    {% else %}
+        {% set bgColor = 'bg-gray-100 dark:bg-gray-800 text-gray-800 dark:text-gray-100' %}
+        {% set username = comment.user.username %}
+    {% endif %}
+
+    <div class="{{ bgColor }} rounded-xl my-3 p-2 block w-full">
+        <p class="text-left top:0 left:0 text-gray-800 dark:text-gray-100 text-md italic">
+            Le : {{ comment.createdAt|date("d/m/Y à G:i", "Europe/Paris") }}<br>
+            De : {{ username }}
+        </p>
+        <p class="text-left mt-3 text-gray-800 dark:text-gray-100 text-md">
+            {{ comment.content|nl2br }}
+        </p>
     </div>
+
 {% endfor %}
+
